@@ -42,6 +42,7 @@ Hathway, John
 Hoffmann, Martin (http://keinebilder.de/)
 Homes, Avi
 Hsiao Wei Chen
+I WEN KAO
 Isaak, Josh (http://www.futurebot.com)
 Instant Games (http://www.instantgames.com.br/)
 Itterheim, Steffen (http://www.gametooldeveloper.com/)
