@@ -278,7 +278,6 @@ Class restartAction()
 		
 		CGSize s = [[CCDirector sharedDirector] winSize];
 		[self addNewSpriteWithCoords:ccp(s.width/2, s.height/2)];
-		
 	}	
 	return self;
 }
