@@ -13,6 +13,7 @@ version 0.99.5 - xx-Dec-2010
 . [FIX] FileUtils: removes -hd suffix if the filename already has it (issue #1040)
 . [FIX] Node: udpated doxygen strings regarding default anchorPoint (issue #1049)
 . [FIX] Sprite: updateTransform can be overriden (issue #824)
+. [FIX] Sprite: Assert if an sprite initialized with a batchnode is not using it (issue #1053)
 . [FIX] SpriteFrameCache: textureFileName is relative to path (issue #1044)
 . [FIX-MAC] Display Link thread: async images works as expected. Disabled by default.
 . [FIX-MAC] MacGLView: VSync is enabled when the view is loaded from the NIB
